<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.game.edu.buzzgame.GameActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"

        android:id="@+id/linearLayout"
        android:background="@drawable/my_border">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ipAddressArea"
            android:hint="@string/ipaddress"
            android:background="@drawable/my_border_input"
            android:padding="5dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/portNumberArea"
            android:hint="@string/portnumber"
            android:background="@drawable/my_border_input"
            android:padding="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nickNameArea"
            android:hint="@string/nickname"
            android:background="@drawable/my_border_input"
            android:padding="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:id="@+id/connectionBtn"
            android:onClick="goToGamePanel"
            android:nestedScrollingEnabled="true"
            android:background="@drawable/my_border_button" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/back"
            android:onClick="back"
            android:background="@drawable/my_border_button" />


    </LinearLayout>


</RelativeLayout>

    </ScrollView>
